# zabawa

./: .gitignore  .taplo.toml  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: lint-test.yml
crates/name/: Cargo.toml
crates/name/src/: lib.rs
crates/notification-domain/: Cargo.toml
crates/notification-domain/src/: model.rs
crates/notification-view/: Cargo.toml
crates/notification-view/src/: context.rs  lib.rs  notification.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs
crates/view-common/: Cargo.toml
crates/view-common/src/: animation.rs  lib.rs
