[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"

[profile.release]
lto = true

[workspace.dependencies]
derive_more = { version = "2.1", features = ["display", "into"] }
deunicode = "1.4"
hypertext = { version = "0.12", features = ["axum", "htmx"] }
thiserror = "2.0"
zabawa-notification-domain = { path = "crates/notification-domain" }
zabawa-notification-view = { path = "crates/notification-view" }
zabawa-validation = { path = "crates/validation" }
